--- a/BlendMask.ipynb
+++ b/BlendMask.ipynb
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77cbfcb3",
+   "id": "8cc18d36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e580198",
+   "id": "5270d30f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1568,7 +1568,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "5bd56d7c",
+   "id": "83c0d86e",
    "metadata": {},
    "outputs": [
     {
@@ -1866,28 +1866,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6f60e591",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#inference_on_dataset(conf, yaml_file, weights, CLASS_NAMES,val_json, val_imgs, test_imgs, path_to_save)\n",
-    "\n",
-    "inference_on_dataset(0.3, 'configs/BlendMask/R_50_1x.yaml', 'training_dir/vac_aug_ISRF_10k_blendmask_R_50_1x/model_final.pth', CLASS_NAMES,val_json, val_imgs, test_imgs, 'predicaa')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "18244586",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "comb_imgs('GT_test', 'predica', 'pred_gt_combo')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
    "id": "c29af65a",
    "metadata": {},
@@ -1936,7 +1914,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "67d9af6f",
+   "id": "b837164d",
    "metadata": {},
    "outputs": [
     {
@@ -1973,7 +1951,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "d05e580f",
+   "id": "4dfbfd5a",
    "metadata": {},
    "outputs": [
     {
@@ -2010,7 +1988,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "3da230d3",
+   "id": "b358b5ff",
    "metadata": {},
    "outputs": [
     {
@@ -2047,7 +2025,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "5e4b7503",
+   "id": "58819130",
    "metadata": {},
    "outputs": [
     {
@@ -2083,8 +2061,122 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "id": "633a243c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Reusing TensorBoard on port 6018 (pid 49598), started 4:40:46 ago. (Use '!kill 49598' to kill it.)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "      <iframe id=\"tensorboard-frame-af727fd42159cfb5\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      </iframe>\n",
+       "      <script>\n",
+       "        (function() {\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-af727fd42159cfb5\");\n",
+       "          const url = new URL(\"/\", window.location);\n",
+       "          const port = 6018;\n",
+       "          if (port) {\n",
+       "            url.port = port;\n",
+       "          }\n",
+       "          frame.src = url;\n",
+       "        })();\n",
+       "      </script>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%tensorboard --logdir ../../blendmask/AdelaiDet/training_dir/vac_aug_ISRF_HFLIP_F_RF_V_10k_blendmask_R_50_1x"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "3755e222",
+   "id": "eeb7bec7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#inference_on_dataset(conf, yaml_file, weights, CLASS_NAMES,val_json, val_imgs, test_imgs, path_to_save)\n",
+    "\n",
+    "inference_on_dataset(0.3, 'configs/BlendMask/R_50_1x.yaml', 'training_dir/vac_aug_ISRF_10k_blendmask_R_50_1x/model_final.pth', CLASS_NAMES,val_json, val_imgs, test_imgs, 'predicaa')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "18244586",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "comb_imgs('GT_test', 'predica', 'pred_gt_combo')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "71d45267",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Reusing TensorBoard on port 6026 (pid 53192), started 0:22:52 ago. (Use '!kill 53192' to kill it.)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "      <iframe id=\"tensorboard-frame-cb525ec3a521d27d\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      </iframe>\n",
+       "      <script>\n",
+       "        (function() {\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-cb525ec3a521d27d\");\n",
+       "          const url = new URL(\"/\", window.location);\n",
+       "          const port = 6026;\n",
+       "          if (port) {\n",
+       "            url.port = port;\n",
+       "          }\n",
+       "          frame.src = url;\n",
+       "        })();\n",
+       "      </script>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%tensorboard --logdir ../../blendmask/AdelaiDet/training_dir/vac10_4_lr0_01blendmask_R_50_1x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd2c28d0",
    "metadata": {},
    "outputs": [],
    "source": []
