Added the final interactive python notebook.ipynb

--- a/BlendMask.ipynb
+++ b/BlendMask.ipynb
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8cc18d36",
+   "id": "767c55a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5270d30f",
+   "id": "3e9e4f6e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1568,7 +1568,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "83c0d86e",
+   "id": "0a31a294",
    "metadata": {},
    "outputs": [
     {
@@ -1914,7 +1914,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "b837164d",
+   "id": "bffbcb67",
    "metadata": {},
    "outputs": [
     {
@@ -1951,7 +1951,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "4dfbfd5a",
+   "id": "bfcbe390",
    "metadata": {},
    "outputs": [
     {
@@ -1988,7 +1988,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "b358b5ff",
+   "id": "3c586477",
    "metadata": {},
    "outputs": [
     {
@@ -2025,7 +2025,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "58819130",
+   "id": "380957e7",
    "metadata": {},
    "outputs": [
     {
@@ -2062,7 +2062,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "633a243c",
+   "id": "d20c74d5",
    "metadata": {},
    "outputs": [
     {
@@ -2108,7 +2108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eeb7bec7",
+   "id": "dceec42e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2124,59 +2124,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "comb_imgs('GT_test', 'predica', 'pred_gt_combo')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "id": "71d45267",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Reusing TensorBoard on port 6026 (pid 53192), started 0:22:52 ago. (Use '!kill 53192' to kill it.)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "      <iframe id=\"tensorboard-frame-cb525ec3a521d27d\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
-       "      </iframe>\n",
-       "      <script>\n",
-       "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-cb525ec3a521d27d\");\n",
-       "          const url = new URL(\"/\", window.location);\n",
-       "          const port = 6026;\n",
-       "          if (port) {\n",
-       "            url.port = port;\n",
-       "          }\n",
-       "          frame.src = url;\n",
-       "        })();\n",
-       "      </script>\n",
-       "    "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "%tensorboard --logdir ../../blendmask/AdelaiDet/training_dir/vac10_4_lr0_01blendmask_R_50_1x"
+    "comb_imgs('GT_test', 'predicta', 'pred_gt_combo')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd2c28d0",
+   "id": "744259f1",
    "metadata": {},
    "outputs": [],
    "source": []
